<resources>
    <string name="app_name">bank-app</string>
    <!-- Strings related to login_layout -->
    <string name="welcomeMessage">Welcome</string>
    <string name="userInput">Username</string>
    <string name="passwordInput">Password</string>
    <string name="login" translatable="false">Login</string>
    <string name="wrongUser">Wrong user</string>
    <string name="wrongPassword">Wrong password</string>
    <string name="invalidField">Insert an user and password</string>
    <string name="amount">Amount</string>
    <string name="transfer">Transfer</string>
    <string name="transfer_btn">Send money</string>
    <string name="balance_account">"Actual balance: "</string>
    <string name="receiver">Receiver account</string>
</resources>
